--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 <div class="container px-4 container1">
 <div class="text-center">
-  <img class="img-fluid" src="img/DXC_logo2.png" alt="LPLogo">
+  <img class="img-fluid" src="../img/DXC_logo2.png" alt="LPLogo">
 </div>
 
 <!--Form part. 1-->
