--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="img/DXC_Logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="DXC_Logo.png" type="image/x-icon">
   <title>DXC Technology</title>
 </head>
 <body class="py-5">
   
 <div class="container px-4 container1">
 <div class="text-center">
-  <img class="img-fluid" src="../img/DXC_logo2.png" alt="LPLogo">
+  <img class="img-fluid" src="DXC_logo2.png" alt="LPLogo">
 </div>
 
 <!--Form part. 1-->
