Ajuste nos campos do formulário

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="./img/DXC_Logo.png" type="image/x-icon">
   <title>DXC Technology</title>
 </head>
-<body class="py-3">
+<body class="py-4">
   
 <div class="container px-3 container1">
 <div class="text-center">
@@ -35,7 +35,7 @@
 
 
 <!--Form part. 3-->
-<p class="mt-3 paragraph">2 - What is your gender?</p>
+<p class="mt-2 paragraph">2 - What is your gender?</p>
 
 <div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
@@ -57,7 +57,7 @@
 </div>
 
 <!--Form part. 4-->
-<p class="mt-3 paragraph">3 - Check the technologies you master:</p>
+<p class="mt-2 paragraph">3 - Check the technologies you master:</p>
 
         <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
@@ -119,20 +119,20 @@
           <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
           <label class="form-check-label" for="inlineCheckbox2">Mid-level</label>
       </div>
-      <div class="form-check form-check-inline mb-3">
+      <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
           <label class="form-check-label" for="inlineCheckbox2">Senior</label>
       </div>
 
       <!--Form part. 7-->
-      <div class="text-center mt-5">
+      <div class="text-center mt-1 pt-5">
       <button type="button" class="btn btn-outline-info">Send</button>
       </div>
 
 </div>
 
 <!--Footer-->
-<div class="container2 text-center footer py-5 mb-60 mt-6">
+<div class="container2 text-center footer py-2 mb-3 mt-2">
   <p>&copy; 2023 Keferson Cola da Conceicao. All rights reserved.</p>
 </div>
 
