Ajuste no footer do formulário

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="py-4">
   
-<div class="container px-3 container1">
+<div class="container px-4 container1">
 <div class="text-center">
   <img class="img-fluid" src="./img/DXC_logo2.png" alt="LPLogo">
 </div>
@@ -132,7 +132,7 @@
 </div>
 
 <!--Footer-->
-<div class="container2 text-center footer py-2 mb-3 mt-2">
+<div class="container2 text-center footer py-2 mt-4">
   <p>&copy; 2023 Keferson Cola da Conceicao. All rights reserved.</p>
 </div>
 
