Redução do layout

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
       <label class="form-check-label" for="flexSwitchCheckDefault">Node.Js</label>
   </div>
-  
+
         <div class="form-check form-switch">
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
             <label class="form-check-label" for="flexSwitchCheckDefault">MySQL</label>
@@ -129,7 +129,7 @@
 </div>
 
 <!--Footer-->
-<div class="container2 text-center footer py-2 mt-4">
+<div class="container2 text-center footer py-3">
   <p>&copy; 2023 Keferson Cola da Conceicao. All rights reserved.</p>
 </div>
 
