Redimensionamento do footer e edição do copyright

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body class="py-4">
   
-<div class="container px-4 container1">
+<div class="container px-3 container1">
 <div class="text-center">
   <img class="img-fluid" src="./img/DXC_logo2.png" alt="LPLogo">
 </div>
 
 <!--Form part. 1-->
-<p class="paragraph">
+<p class="mb-2 paragraph">
   1 - What's your name?
 </p>
 
@@ -122,15 +122,15 @@
       </div>
 
       <!--Form part. 7-->
-      <div class="text-center mt-1 pt-5">
+      <div class="text-center mt-4 pt-3">
       <button type="button" class="btn btn-outline-info">Send</button>
       </div>
 
 </div>
 
 <!--Footer-->
-<div class="container2 text-center footer py-3">
-  <p>&copy; 2023 Keferson Cola da Conceicao. All rights reserved.</p>
+<div class="container2 text-center footer pt-4">
+  <p>&copy; 2023 Keferson. All rights reserved.</p>
 </div>
 
 
