--- a/index.html
+++ b/index.html
@@ -1,142 +1,242 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="./img/DXC_Logo.png" type="image/x-icon">
-  <title>DXC Technology</title>
-</head>
-<body class="py-4">
-  
-<div class="container px-3 container1">
-<div class="text-center">
-  <img class="img-fluid" src="./img/DXC_logo2.png" alt="LPLogo">
-</div>
-
-<!--Form part. 1-->
-<p class="mb-2 paragraph">
-  1 - What's your name?
-</p>
-
-<!--Form part. 2 -> Input 1-->
-<div class="input-group mb-2 p-2">
-  <span class="input-group-text" id="basic-addon1">First name:</span>
-  <input type="text" class="form-control" placeholder="Type here" aria-label="Username" aria-describedby="basic-addon1">
-</div>
-
-
-<!--Fom part. 2 -> Input 2-->
-<div class="input-group mb-2 p-2">
-  <span class="input-group-text" id="basic-addon1">Last name:</span>
-  <input type="text" class="form-control" placeholder="Type here" aria-label="Username" aria-describedby="basic-addon1">
-</div>
-
-
-<!--Form part. 3-->
-<p class="mt-2 paragraph">2 - What is your gender?</p>
-
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-  <label class="form-check-label" for="flexRadioDefault1">
-      Man
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-  <label class="form-check-label" for="flexRadioDefault2">
-      Woman
-  </label>
-</div>
-<div class="form-check mb-2">
-  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-  <label class="form-check-label" for="flexRadioDefault2">
-     I prefer not to inform
-  </label>
-</div>
-
-<!--Form part. 4-->
-<p class="mt-2 paragraph">3 - Check the technologies you master:</p>
-
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Html5</label>
-        </div>
-
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Css3</label>
-        </div>
-
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Javascript (ES6)</label>
-        </div>
-
-        <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-          <label class="form-check-label" for="flexSwitchCheckDefault">React.Js</label>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./img/DXC_Logo.png" type="image/x-icon" />
+    <title>DXC Technology</title>
+  </head>
+  <body class="py-4">
+    <div class="container px-3 container1">
+      <div class="text-center">
+        <img class="img-fluid" src="./img/DXC_logo2.png" alt="LPLogo" />
       </div>
 
-    <div class="form-check form-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-      <label class="form-check-label" for="flexSwitchCheckDefault">Node.Js</label>
-  </div>
+      <!--Form part. 1-->
+      <p class="mb-2 paragraph">1 - What's your full name?</p>
 
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">MySQL</label>
-        </div>
+      <!--Form part. 2 -> Input 1-->
+      <div class="input-group mb-2 p-2">
+        <span class="input-group-text" id="basic-addon1">First name:</span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Type here"
+          aria-label="Username"
+          aria-describedby="basic-addon1"
+        />
+      </div>
+
+      <!--Fom part. 2 -> Input 2-->
+      <div class="input-group mb-2 p-2">
+        <span class="input-group-text" id="basic-addon1">Last name:</span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Type here"
+          aria-label="Username"
+          aria-describedby="basic-addon1"
+        />
+      </div>
+
+      <!--Form part. 3-->
+      <p class="mt-2 paragraph">2 - What is your gender?</p>
+
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="flexRadioDefault"
+          id="flexRadioDefault1"
+        />
+        <label class="form-check-label" for="flexRadioDefault1"> Man </label>
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="flexRadioDefault"
+          id="flexRadioDefault2"
+        />
+        <label class="form-check-label" for="flexRadioDefault2"> Woman </label>
+      </div>
+      <div class="form-check mb-2">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="flexRadioDefault"
+          id="flexRadioDefault2"
+        />
+        <label class="form-check-label" for="flexRadioDefault2">
+          I prefer not to inform
+        </label>
+      </div>
+
+      <!--Form part. 4-->
+      <p class="mt-2 paragraph">3 - Check the technologies you master:</p>
+
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+        <label class="form-check-label" for="flexSwitchCheckDefault"
+          >Html5</label
+        >
+      </div>
+
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+        <label class="form-check-label" for="flexSwitchCheckDefault"
+          >Css3</label
+        >
+      </div>
+
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+        <label class="form-check-label" for="flexSwitchCheckDefault"
+          >Javascript (ES6)</label
+        >
+      </div>
+
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+        <label class="form-check-label" for="flexSwitchCheckDefault"
+          >React.Js</label
+        >
+      </div>
+
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+        <label class="form-check-label" for="flexSwitchCheckDefault"
+          >Node.Js</label
+        >
+      </div>
+
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+        <label class="form-check-label" for="flexSwitchCheckDefault"
+          >MySQL</label
+        >
+      </div>
 
       <!--Form part. 5-->
-<p class="mt-3 paragraph">4 - Which vacancy are you currently applying for?</p>
+      <p class="mt-3 paragraph">
+        4 - Which vacancy are you currently applying for?
+      </p>
 
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-            <label class="form-check-label" for="inlineCheckbox1">Front-End</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-            <label class="form-check-label" for="inlineCheckbox2">Back-End</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-            <label class="form-check-label" for="inlineCheckbox2">Full-Stack</label>
-        </div>
-      
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox1"
+          value="option1"
+        />
+        <label class="form-check-label" for="inlineCheckbox1">Front-End</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox2"
+          value="option2"
+        />
+        <label class="form-check-label" for="inlineCheckbox2">Back-End</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox2"
+          value="option2"
+        />
+        <label class="form-check-label" for="inlineCheckbox2">Full-Stack</label>
+      </div>
+
       <!--Form part. 6-->
-<p class="mt-3 paragraph"> 5 - What is your current level of experience?</p>
+      <p class="mt-3 paragraph">
+        5 - What is your current level of experience?
+      </p>
 
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-          <label class="form-check-label" for="inlineCheckbox2">Entry-level</label>
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox2"
+          value="option2"
+        />
+        <label class="form-check-label" for="inlineCheckbox2"
+          >Entry-level</label
+        >
       </div>
       <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-          <label class="form-check-label" for="inlineCheckbox2">Mid-level</label>
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox2"
+          value="option2"
+        />
+        <label class="form-check-label" for="inlineCheckbox2">Mid-level</label>
       </div>
       <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-          <label class="form-check-label" for="inlineCheckbox2">Senior</label>
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox2"
+          value="option2"
+        />
+        <label class="form-check-label" for="inlineCheckbox2">Senior</label>
       </div>
 
       <!--Form part. 7-->
       <div class="text-center mt-4 pt-3">
-      <button type="button" class="btn btn-outline-info">Send</button>
+        <button type="button" class="btn btn-outline-info">Send</button>
       </div>
+    </div>
 
-</div>
+    <!--Footer-->
+    <div class="container2 text-center footer pt-4">
+      <p>&copy; 2023 Keferson. All rights reserved.</p>
+    </div>
 
-<!--Footer-->
-<div class="container2 text-center footer pt-4">
-  <p>&copy; 2023 Keferson. All rights reserved.</p>
-</div>
-
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
