Atualização do Checkbox

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           id="flexSwitchCheckDefault"
         />
         <label class="form-check-label" for="flexSwitchCheckDefault"
-          >Html5</label
+          >Html</label
         >
       </div>
 
@@ -101,9 +101,7 @@
           role="switch"
           id="flexSwitchCheckDefault"
         />
-        <label class="form-check-label" for="flexSwitchCheckDefault"
-          >Css3</label
-        >
+        <label class="form-check-label" for="flexSwitchCheckDefault">Css</label>
       </div>
 
       <div class="form-check form-switch">
@@ -114,7 +112,7 @@
           id="flexSwitchCheckDefault"
         />
         <label class="form-check-label" for="flexSwitchCheckDefault"
-          >Javascript (ES6)</label
+          >Javascript</label
         >
       </div>
 
