--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
           aria-describedby="basic-addon1"
         />
       </div>
-
-      <!--Fom part. 2 -> Input 2-->
       <div class="input-group mb-2 p-2">
-        <span class="input-group-text" id="basic-addon2">Last name:</span>
+        <span class="input-group-text" id="basic-addon1">Last name:</span>
         <input
           type="text"
           class="form-control"
@@ -46,8 +44,21 @@
         />
       </div>
 
+      <p class="mb-2 paragraph">2 - Enter your email:</p>
+      <!--Fom part. 2 -> Input 2-->
+      <div class="input-group mb-2 p-2">
+        <span class="input-group-text" id="basic-addon2">Email:</span>
+        <input
+          type="email"
+          class="form-control"
+          placeholder="Type here"
+          aria-label="Username"
+          aria-describedby="basic-addon1"
+        />
+      </div>
+
       <!--Form part. 3-->
-      <p class="mt-2 paragraph">2 - What is your gender?</p>
+      <p class="mt-2 paragraph">3 - What is your gender?</p>
 
       <div class="form-check">
         <input
@@ -80,7 +91,7 @@
       </div>
 
       <!--Form part. 4-->
-      <p class="mt-2 paragraph">3 - Check the technologies you master:</p>
+      <p class="mt-2 paragraph">4 - Check the technologies you master:</p>
 
       <div class="form-check form-switch">
         <input
@@ -154,7 +165,7 @@
 
       <!--Form part. 5-->
       <p class="mt-3 paragraph">
-        4 - Which vacancy are you currently applying for?
+        5 - Which vacancy are you currently applying for?
       </p>
 
       <div class="form-check form-check-inline">
@@ -164,6 +175,18 @@
           id="inlineCheckbox1"
           value="option1"
         />
+        <label class="form-check-label" for="inlineCheckbox1"
+          >UI/UX Developer</label
+        >
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox1"
+          value="option2"
+        />
         <label class="form-check-label" for="inlineCheckbox1">Front-End</label>
       </div>
       <div class="form-check form-check-inline">
@@ -171,7 +194,7 @@
           class="form-check-input"
           type="checkbox"
           id="inlineCheckbox2"
-          value="option2"
+          value="option3"
         />
         <label class="form-check-label" for="inlineCheckbox2">Back-End</label>
       </div>
@@ -180,15 +203,25 @@
           class="form-check-input"
           type="checkbox"
           id="inlineCheckbox2"
-          value="option2"
+          value="option4"
         />
         <label class="form-check-label" for="inlineCheckbox2">Full-Stack</label>
       </div>
 
       <!--Form part. 6-->
       <p class="mt-3 paragraph">
-        5 - What is your current level of experience?
+        6 - What is your current level of experience?
       </p>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="inlineCheckbox2"
+          value="option1"
+        />
+        <label class="form-check-label" for="inlineCheckbox2">Trainee</label>
+      </div>
 
       <div class="form-check form-check-inline">
         <input
@@ -206,7 +239,7 @@
           class="form-check-input"
           type="checkbox"
           id="inlineCheckbox2"
-          value="option2"
+          value="option3"
         />
         <label class="form-check-label" for="inlineCheckbox2">Mid-level</label>
       </div>
@@ -215,7 +248,7 @@
           class="form-check-input"
           type="checkbox"
           id="inlineCheckbox2"
-          value="option2"
+          value="option4"
         />
         <label class="form-check-label" for="inlineCheckbox2">Senior</label>
       </div>
