Alteração do botão de "Enviar"

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
       <!--Form part. 7-->
       <div class="text-center mt-4 pt-3">
-        <button type="button" class="btn btn-outline-info">Send</button>
+        <button type="submit" class="btn btn-outline-info">Send</button>
       </div>
     </div>
 
