--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="../lp-dxc-technology/img/DXC_Logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="./img/DXC_Logo.png" type="image/x-icon">
   <title>DXC Technology</title>
 </head>
 <body class="py-3">
   
 <div class="container px-3 container1">
 <div class="text-center">
-  <img class="img-fluid" src="../lp-dxc-technology/img/DXC_logo2.png" alt="LPLogo">
+  <img class="img-fluid" src="./img/DXC_logo2.png" alt="LPLogo">
 </div>
 
 <!--Form part. 1-->
@@ -83,14 +83,6 @@
       <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
       <label class="form-check-label" for="flexSwitchCheckDefault">Node.Js</label>
   </div>
-  <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-    <label class="form-check-label" for="flexSwitchCheckDefault">Angular</label>
-</div>
-  <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-    <label class="form-check-label" for="flexSwitchCheckDefault">MongoDB</label>
-</div>
 <div class="form-check form-switch">
   <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
   <label class="form-check-label" for="flexSwitchCheckDefault">PostgreSQL</label>
@@ -99,10 +91,6 @@
             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
             <label class="form-check-label" for="flexSwitchCheckDefault">MySQL</label>
         </div>
-        <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-          <label class="form-check-label" for="flexSwitchCheckDefault">NoSQL</label>
-      </div>
 
       <!--Form part. 5-->
 <p class="mt-3 paragraph">4 - Which vacancy are you currently applying for?</p>
