--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<<<<<<< HEAD
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,22 +20,35 @@
   1 - What's your name?
 </p>
 
-<!--Form part. 2 -> Input 1-->
-<div class="input-group mb-2 p-2">
+<!--Part. 1 (Input 1)-->
+<div class="input-group mb-1 p-2">
   <span class="input-group-text" id="basic-addon1">First name:</span>
   <input type="text" class="form-control" placeholder="Type here" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 
 
-<!--Fom part. 2 -> Input 2-->
+<!--Part. 1 (Input 2)-->
 <div class="input-group mb-2 p-2">
   <span class="input-group-text" id="basic-addon1">Last name:</span>
   <input type="text" class="form-control" placeholder="Type here" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 
+<!--Form part. 2-->
+<p class="mb-2 paragraph">2 - Enter your email:</p>
+<div class="input-group mb-2 p-1">
+  <span class="input-group-text" id="basic-addon2">Email:</span>
+  <input
+    type="email"
+    class="form-control"
+    placeholder="Type here"
+    aria-label="Username"
+    aria-describedby="basic-addon3"
+  />
+</div>
+
 
 <!--Form part. 3-->
-<p class="mt-3 paragraph">2 - What is your gender?</p>
+<p class="mt-3 paragraph">3 - What is your gender?</p>
 
 <div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
@@ -58,136 +70,10 @@
 </div>
 
 <!--Form part. 4-->
-<p class="mt-3 paragraph">3 - Check the technologies you master:</p>
-
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Html5</label>
-        </div>
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Css3</label>
-        </div>
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Javascript (ES6)</label>
-        </div>
-        <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-          <label class="form-check-label" for="flexSwitchCheckDefault">React.Js</label>
-=======
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./img/DXC_Logo.png" type="image/x-icon" />
-    <title>DXC Technology</title>
-  </head>
-  <body class="py-4">
-    <div class="container px-3 container1">
-      <div class="text-center">
-        <img class="img-fluid" src="./img/DXC_logo2.png" alt="LPLogo" />
->>>>>>> b2136cd7240573e84486203f9b810b83b3652ea5
-      </div>
-
-      <!--Form part. 1-->
-      <p class="mb-2 paragraph">1 - What's your full name?</p>
-
-      <!--Form part. 2 -> Input 1-->
-      <div class="input-group mb-2 p-1">
-        <span class="input-group-text" id="basic-addon1">First name:</span>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Type here"
-          aria-label="Username"
-          aria-describedby="basic-addon1"
-        />
-      </div>
-      <div class="input-group mb-2 p-1">
-        <span class="input-group-text" id="basic-addon1">Last name:</span>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Type here"
-          aria-label="Username"
-          aria-describedby="basic-addon1"
-        />
-      </div>
-
-      <p class="mb-2 paragraph">2 - Enter your email:</p>
-      <!--Fom part. 2 -> Input 2-->
-      <div class="input-group mb-2 p-1">
-        <span class="input-group-text" id="basic-addon2">Email:</span>
-        <input
-          type="email"
-          class="form-control"
-          placeholder="Type here"
-          aria-label="Username"
-          aria-describedby="basic-addon3"
-        />
-      </div>
-
-      <!--Form part. 3-->
-      <p class="mt-2 paragraph">3 - What is your gender?</p>
-
-      <div class="form-check">
-        <input
-          class="form-check-input"
-          type="radio"
-          name="flexRadioDefault"
-          id="flexRadioDefault1"
-        />
-        <label class="form-check-label" for="flexRadioDefault1"> Man </label>
-      </div>
-      <div class="form-check">
-        <input
-          class="form-check-input"
-          type="radio"
-          name="flexRadioDefault"
-          id="flexRadioDefault2"
-        />
-        <label class="form-check-label" for="flexRadioDefault2"> Woman </label>
-      </div>
-      <div class="form-check mb-2">
-        <input
-          class="form-check-input"
-          type="radio"
-          name="flexRadioDefault"
-          id="flexRadioDefault2"
-        />
-        <label class="form-check-label" for="flexRadioDefault2">
-          I prefer not to inform
-        </label>
-      </div>
-
-      <!--Form part. 4-->
-      <p class="mt-2 paragraph">4 - Check the technologies you master:</p>
+      <p class="mt-3 paragraph">4 - Check the technologies you master:</p>
 
       <div class="form-check form-switch">
-<<<<<<< HEAD
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-        <label class="form-check-label" for="flexSwitchCheckDefault">Next.Js</label>
-    </div>
-    <div class="form-check form-switch">
-      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-      <label class="form-check-label" for="flexSwitchCheckDefault">Node.Js</label>
-  </div>
-<div class="form-check form-switch">
-  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-  <label class="form-check-label" for="flexSwitchCheckDefault">PostgreSQL</label>
-</div>
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            <label class="form-check-label" for="flexSwitchCheckDefault">MySQL</label>
-        </div>
-=======
+
         <input
           class="form-check-input"
           type="checkbox"
@@ -256,9 +142,8 @@
           >MySQL</label
         >
       </div>
->>>>>>> b2136cd7240573e84486203f9b810b83b3652ea5
 
-      <!--Form part. 5-->
+      <!--Form part. 6-->
       <p class="mt-3 paragraph">
         5 - Which vacancy are you currently applying for?
       </p>
@@ -303,7 +188,7 @@
         <label class="form-check-label" for="inlineCheckbox2">Full-Stack</label>
       </div>
 
-      <!--Form part. 6-->
+      <!--Form part. 7-->
       <p class="mt-3 paragraph">
         6 - What is your current level of experience?
       </p>
@@ -348,7 +233,7 @@
         <label class="form-check-label" for="inlineCheckbox2">Senior</label>
       </div>
 
-      <!--Form part. 7-->
+      <!--Form part. 8-->
       <div class="text-center mt-4 pt-3">
         <button type="submit" class="btn btn-outline-info">Send</button>
       </div>
