--- a/index.html
+++ b/index.html
@@ -198,16 +198,6 @@
           class="form-check-input"
           type="checkbox"
           id="inlineCheckbox2"
-          value="option1"
-        />
-        <label class="form-check-label" for="inlineCheckbox2">Trainee</label>
-      </div>
-
-      <div class="form-check form-check-inline">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          id="inlineCheckbox2"
           value="option2"
         />
         <label class="form-check-label" for="inlineCheckbox2"
@@ -233,11 +223,14 @@
         <label class="form-check-label" for="inlineCheckbox2">Senior</label>
       </div>
 
-      <!--Form part. 8-->
-      <div class="text-center mt-4 pt-3">
-        <button type="submit" class="btn btn-outline-info">Send</button>
-      </div>
-    </div>
+      <!--Button (submit). 8-->
+      <button type="button" class="btn btn-primary mt-5 py-2 px-5"
+      data-bs-toggle="popover" data-bs-placement="right"
+      data-bs-custom-class="custom-popover"
+      data-bs-title="Thank you!  ;)"
+      data-bs-content="Message sent successfully.">
+Apply
+</button>
 
     <!--Footer-->
     <div class="container2 text-center footer pt-4">
@@ -247,7 +240,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
+      <script>
+        const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+      </script>
   </body>
 </html>
