Implementação de autenticação do form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </div>
 
 <!--Form part. 1-->
+<form action="https://formsubmit.co/kefersonbuzatto90@gmail.com" method="POST">
 <p class="paragraph">
   1 - What's your name?
 </p>
@@ -231,11 +232,12 @@
       data-bs-content="Message sent successfully.">
 Apply
 </button>
+</form>
 
-    <!--Footer-->
-    <div class="container2 text-center footer pt-4">
-      <p>&copy; 2023 Keferson. All rights reserved.</p>
-    </div>
+<!--Footer-->
+<div class="container2 text-center footer pt-4">
+  <p>&copy; 2023 Keferson. All rights reserved.</p>
+</div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
