Atualização do form

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <button type="button" class="btn btn-primary mt-5 py-2 px-5"
       data-bs-toggle="popover" data-bs-placement="right"
       data-bs-custom-class="custom-popover"
-      data-bs-title="Thank you!  ;)"
+      data-bs-title="Thank you!"
       data-bs-content="Message sent successfully.">
 Apply
 </button>
