--- a/index.html
+++ b/index.html
@@ -224,15 +224,12 @@
         <label class="form-check-label" for="inlineCheckbox2">Senior</label>
       </div>
 
-      <!--Button (submit). 7-->
-      <button type="button" class="btn btn-primary mt-5 py-2 px-5"
-      data-bs-toggle="popover" data-bs-placement="right"
-      data-bs-custom-class="custom-popover"
-      data-bs-title="Thank you!"
-      data-bs-content="Message sent successfully.">
-Apply
-</button>
-</form>
+      <!--Form (submit) part. 7-->
+      <div class="text-center mt-4 pt-3">
+        <button type="submit" class="btn btn-outline-info">Send</button>
+      </div>
+    </div>
+  </form>
 
 <!--Footer-->
 <div class="container2 text-center footer pt-4">
